<resources>
    <string name="app_name">timhieu</string>
    <string name="welcome_admin">Chào mừng Admin!</string>
    <string name="logout">Đăng xuất</string>
    <string name="admin_page_description">Đây là trang quản trị</string>
    <string name="welcome_home">Chào mừng bạn đến với trang chủ!</string>
    <string name="login_title">ĐĂNG NHẬP</string>
    <string name="login">Đăng nhập</string>
    <string name="username_hint">Tên đăng nhập</string>
    <string name="password_hint">Mật khẩu</string>
    <string name="go_to_register">Chưa có tài khoản? Đăng ký ngay</string>
    <string name="register_title">Đăng ký tài khoản</string>
    <string name="register">Đăng ký</string>
    <string name="confirm_password_hint">Xác nhận mật khẩu</string>
    <string name="email_hint">Email</string>
    <string name="back_to_login">Đã có tài khoản? Đăng nhập ngay</string>
    <string name="landing_title">Ở ĐÂY LÀM MỘT CÁI GÌ ĐẤY</string>
    <string name="landing_subtitle">BACKGROUND HOA LÁ CÀNH BLABLA</string>
    <string name="login_btn">Đăng nhập</string>
    <string name="register_btn">Đăng ký</string>
    <string name="find_locker">Tìm vị trí thuê tủ</string>
    <string name="rent_locker">Thuê tủ</string>
    <string name="search_locker_title">Searching tủ ở gần bạn</string>
    <string name="locker_list_hint">danh sách tủ</string>
    <string name="rent_locker_title">THUÊ TỦ</string>
    <string name="renter_name">Tên người thuê</string>
    <string name="phone_number">Số điện thoại</string>
    <string name="locker_type">Thuộc</string>
    <string name="rent_by_hour">thuê theo giờ</string>
    <string name="rent_by_day">thuê theo ngày</string>
    <string name="price_hour">30k/h</string>
    <string name="price_day">150k/ngày</string>
    <string name="btn_rent_confirm">thuê tủ</string>
    <string name="hour_1">1h</string>
    <string name="hour_2">2h</string>
    <string name="hour_3">3h</string>
    <string name="hour_4">4h</string>
    <string name="hour_5">5h</string>
    <string name="hour_6">6h</string>
    <string name="hour_7">7h</string>
    <string name="hour_8">8h</string>
    <string name="day_1">1 ngày</string>
    <string name="day_2">2 ngày</string>
    <string name="day_3">3 ngày</string>
    <string name="day_4">4 ngày</string>
    <string name="day_5">5 ngày</string>
    <string name="day_6">6 ngày</string>
    <string name="day_7">7 ngày</string>
    <string name="total_price_label">Tổng tiền: %sđ</string>
    <string name="rent_once">1 Lần</string>
    <string name="price_once">15k</string>
    <string name="rent_by_month">thuê theo tháng</string>
    <string name="price_month">500k/tháng</string>
    <string name="month_1">1 tháng</string>
    <string name="month_2">2 tháng</string>
    <string name="month_3">3 tháng</string>
    <string name="back_desc">Quay lại</string>
    <string name="locker_icon_desc">Biểu tượng tủ</string>
    <string name="payment_title">THANH TOÁN</string>
    <string name="payment_amount_label">Số tiền: %sđ</string>
    <string name="scan_qr_hint">Quét mã QR để thanh toán</string>
    <string name="confirm_payment_btn">Xác nhận đã thanh toán</string>
    <string name="qr_code_desc">Mã QR thanh toán</string>
    <string name="locker_number_label">TỦ SỐ: %s</string>
    <string name="locker_address_label">TỦ Ở ĐỊA CHỈ: %s</string>
    <string name="locker_id_small_label">Mã tủ: %s</string>
    <string name="locker_status_label">Trạng thái: %s</string>
    <string name="locker_code_title">MÃ TỦ</string>
    <string name="back_to_home">Quay về trang chủ</string>
    <string name="map_preview_text">Map Preview</string>
    <string name="hello_title">Xin chào!</string>
    <string name="login_subtitle">Đăng nhập để tiếp tục</string>
    <string name="error_empty_fields">Vui lòng nhập đầy đủ thông tin</string>
    <string name="login_success">Đăng nhập thành công</string>
    <string name="login_failed">Sai tài khoản hoặc mật khẩu</string>
    <string name="connection_error">Lỗi kết nối: %s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="back_button_text">QUAY LẠI</string>
</resources>